major updates to homepage and added slurp

--- a/index.html
+++ b/index.html
@@ -69,9 +69,15 @@
 </div>
 <p><code>> <span style="color:orange;">from</span> humans <span style="color:orange;">import</span> sarth</code></p>
 
-<p>I'm a 1B Software Engineering student at the University of Waterloo. I enjoy working on interesting <a href="projects.html">projects</a> and learning new <a href="courses.html ">things.</a> When done my degree I want to take up a full-time software job and continue to learn whatever my heart desires. Currently I'm looking for internship opportunities during the summer of 2016.</p>
+<p>I'm a 2B Software Engineering student at the University of Waterloo. I enjoy working on interesting <a href="projects.html">projects</a>. I'm looking for an internship in fall 2018, reach out to me at <a href="mailto:sarth.frey@gmail.com" target="_top">sarth.frey@gmail.com</a>.</p>
 
-<p>This past summer I worked at <a target='_blank' href="http://www.medcan.com/">Medcan</a>, a large preventive medicine clinic in Toronto. I used supervised learning techniques to predict customer churn.</p>
+<p>Over the last year I've done two internships at an AI startup called <a target='_blank' href="http://www.talkiq.com">TalkIQ</a> in the <a target='_blank' href="http://www.atomic">Atomic VC</a> San Francisco and KW offices. I greatly improved our speech recognition, and later consolidated our entire NLP active learning pipeline which also led to building a distributed GPU framework for conducting bayesian hyperparameter searches.</p>
+
+<p>In the Fall of 2016 I worked at <a target='_blank' href="http://www.kik.com/">Kik</a>, a chat app. I used topic modelling to detect platform abuse, and built systems to orchestrate hundreds data pipelines carrying petabytes of data. </p>
+
+<p>The summer prior I worked at <a target='_blank' href="http://www.shopify.com/">Shopify</a>, an ecommerce platform. I used named entity recognizers to report personally identifiable information, and handled the anomaly detection server for all of our major services.</p>
+
+<p>In highschool I worked at <a target='_blank' href="http://www.medcan.com/">Medcan</a>, a large preventive medicine clinic in Toronto, where I used supervised learning techniques to predict customer churn. Earlier, I worked at <a target='_blank' href="http://www.mozilla.com/">Mozilla</a>, contributing to our data privacy project among other things.</p>
 
 <p>In my spare time I like to write to my <a target='_blank' href="http://www.sarthfrey.wordpress.com">blog.</a> I also enjoy educating youth and recently did so as a mentor at <a target='_blank' href="http://ladieslearningcode.com/program/kids-learning-code/">Kids Learning Code</a> in Toronto. I also waste multiple hours playing the video card game <a target='_blank' href="http://us.battle.net/hearthstone/en/">Hearthstone</a> and to make that sound a little more worthwhile I'll mention that my rank is in the top 1% worldwide.
 
