update homepage image

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="page-content">
       <div class="wrapper">
         <div style="text-align:center">
-  <img src="./img/me.png" width="200" align="center" style="margin-bottom:30px; border-radius:200px">
+  <img src="./img/me2.jpeg" width="200" align="center" style="margin-bottom:30px; border-radius:200px">
 </div>
 <p><code>> <span style="color:orange;">from</span> humans <span style="color:orange;">import</span> sarth</code></p>
 
