another description update

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <p>I'm a 2B Software Engineering student at the University of Waterloo. I enjoy working on interesting <a href="projects.html">projects</a>. I'm looking for an internship in fall 2018, reach out to me at <a href="mailto:sarth.frey@gmail.com" target="_top">sarth.frey@gmail.com</a>.</p>
 
-<p>Over the last year I've done two internships at an AI startup called <a target='_blank' href="http://www.talkiq.com">TalkIQ</a> in the <a target='_blank' href="http://www.atomic">Atomic VC</a> San Francisco and KW offices. I greatly improved our speech recognition, and later consolidated our entire NLP active learning pipeline which also led to building a distributed GPU framework for conducting bayesian hyperparameter searches on our neural networks.</p>
+<p>Over the last year I've done two internships at an AI startup called <a target='_blank' href="http://www.talkiq.com">TalkIQ</a> in the <a target='_blank' href="http://www.atomic">Atomic VC</a> San Francisco and KW offices. I improved our speech recognition, consolidated our NLP active learning pipeline, and built a distributed GPU framework for conducting bayesian hyperparameter searches on our deep learning models. Other super fun projects included building a CLI to manage our data science rig and proving our ASR performs better than Google's. </p>
 
 <p>In the Fall of 2016 I worked at <a target='_blank' href="http://www.kik.com/">Kik</a>, a chat app. I used topic modelling to detect platform abuse, and built systems to orchestrate hundreds data pipelines carrying petabytes of data. </p>
 
