--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 <p>In highschool I worked at <a target='_blank' href="http://www.medcan.com/">Medcan</a>, a large preventive medicine clinic in Toronto, where I used supervised learning techniques to predict customer churn. Earlier, I worked at <a target='_blank' href="http://www.mozilla.com/">Mozilla</a>, contributing to our data privacy project among other things.</p>
 
-<p>In my spare time I like to write to my <a target='_blank' href="http://www.sarthfrey.wordpress.com">blog.</a> I also enjoy educating youth and recently did so as a mentor at <a target='_blank' href="http://ladieslearningcode.com/program/kids-learning-code/">Kids Learning Code</a> in Toronto. I also waste multiple hours playing the video card game <a target='_blank' href="http://us.battle.net/hearthstone/en/">Hearthstone</a> and to make that sound a little more worthwhile I'll mention that my rank is in the top 1% worldwide.
+<p>In my spare time I like to write to my <a target='_blank' href="https://medium.com/@sarthfrey">blog.</a> I also enjoy educating youth and recently did so as a mentor at <a target='_blank' href="http://ladieslearningcode.com/program/kids-learning-code/">Kids Learning Code</a> in Toronto. I also spend countless hours lifting, running, and taking/editing photos. 
 
 <p>My resume can be found <a target='_blank' href="resume.html">here.</a> It’s probably out of date.</p>
 
