shorten past experience

--- a/index.html
+++ b/index.html
@@ -73,13 +73,9 @@
 
 <p>Over the last year I've done two internships at an AI startup called <a target='_blank' href="http://www.talkiq.com">TalkIQ</a> in the <a target='_blank' href="http://www.atomic">Atomic VC</a> San Francisco and KW offices. I improved our speech recognition, consolidated our NLP active learning pipeline, and built a distributed GPU framework for conducting bayesian hyperparameter searches on our deep learning models. Other super fun projects included building a CLI to manage our data science rig and proving our ASR performs better than Google's. </p>
 
-<p>In the Fall of 2016 I worked at <a target='_blank' href="http://www.kik.com/">Kik</a>, a chat app. I used topic modelling to detect platform abuse, and built systems to orchestrate hundreds data pipelines carrying petabytes of data. </p>
+<p>I've previously had great fun doing data science work <a target='_blank' href="http://www.kik.com/">Kik</a>, <a target='_blank' href="http://www.shopify.com/">Shopify</a>, <a target='_blank' href="http://www.medcan.com/">Medcan</a>, and <a target='_blank' href="http://www.mozilla.com/">Mozilla</a></p>
 
-<p>The summer prior I worked at <a target='_blank' href="http://www.shopify.com/">Shopify</a>, an ecommerce platform. I used named entity recognizers to report personally identifiable information, and handled the anomaly detection server for all of our major services.</p>
-
-<p>In highschool I worked at <a target='_blank' href="http://www.medcan.com/">Medcan</a>, a large preventive medicine clinic in Toronto, where I used supervised learning techniques to predict customer churn. Earlier, I worked at <a target='_blank' href="http://www.mozilla.com/">Mozilla</a>, contributing to our data privacy project among other things.</p>
-
-<p>In my spare time I like to write to my <a target='_blank' href="https://medium.com/@sarthfrey">blog.</a> I also enjoy educating youth and recently did so as a mentor at <a target='_blank' href="http://ladieslearningcode.com/program/kids-learning-code/">Kids Learning Code</a> in Toronto. I also spend countless hours lifting, running, and taking/editing photos. 
+<p>In my spare time I like to write to my <a target='_blank' href="https://medium.com/@sarthfrey">blog.</a> I also enjoy educating youth and recently did so as a mentor at <a target='_blank' href="http://ladieslearningcode.com/program/kids-learning-code/">Kids Learning Code</a> in Toronto. I also spend countless hours lifting, running, and taking/editing photos.</p>
 
 <p>My resume can be found <a target='_blank' href="resume.html">here.</a> It’s probably out of date.</p>
 
