--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 <p>Over the last year I've done two internships at an AI startup called <a target='_blank' href="http://www.talkiq.com">TalkIQ</a> in the <a target='_blank' href="http://www.atomic">Atomic VC</a> San Francisco and KW offices. I greatly improved our speech recognition, built our whole NLP active learning pipeline, and created a distributed GPU framework for conducting bayesian hyperparameter searches which we use to train hundreds deep learning models. Other notable projects included building a CLI to manage our data science rig and proving our ASR performs better than Google's!</p>
 
-<p>I've previously had great fun doing data science work <a target='_blank' href="http://www.kik.com/">Kik</a>, <a target='_blank' href="http://www.shopify.com/">Shopify</a>, <a target='_blank' href="http://www.medcan.com/">Medcan</a>, and <a target='_blank' href="http://www.mozilla.com/">Mozilla</a></p>
+<p>I've previously had great fun doing data science work while interning at <a target='_blank' href="http://www.kik.com/">Kik</a>, <a target='_blank' href="http://www.shopify.com/">Shopify</a>, <a target='_blank' href="http://www.medcan.com/">Medcan</a>, and <a target='_blank' href="http://www.mozilla.com/">Mozilla</a></p>
 
 <p>In my spare time I like to write to my <a target='_blank' href="https://medium.com/@sarthfrey">blog.</a> I also enjoy educating youth and recently did so as a mentor at <a target='_blank' href="http://ladieslearningcode.com/program/kids-learning-code/">Kids Learning Code</a> in Toronto. I also spend countless hours lifting, running, and taking/editing photos.</p>
 
