--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 
 <p>In my spare time I like to write to my <a target='_blank' href="https://medium.com/@sarthfrey">blog</a>. I also enjoy educating youth and recently did so as a mentor at <a target='_blank' href="http://ladieslearningcode.com/program/kids-learning-code/">Kids Learning Code</a> in Toronto. I also spend countless hours lifting, running, and taking/editing photos.</p>
 
-<p>My resume can be found <a target='_blank' href="resume.html">here.</a> It’s probably out of date.</p>
+<p>My resume can be found <a target='_blank' href="resume.html">here</a>. It’s probably out of date.</p>
 
-<p>This site is generously hosted via <a target='_blank' href="https://pages.github.com/">Github Pages.</a>
+<p>This site is generously hosted via <a target='_blank' href="https://pages.github.com/">Github Pages</a>.</p>
 
       </div>
     </div>
