--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div style="text-align:center">
   <img src="./img/me2.jpeg" width="200" align="center" style="margin-bottom:30px; border-radius:200px">
 </div>
-<p><code>> <span style="color:orange;">from</span> humans <span style="color:orange;">import</span> sarth</code></p>
+<p><code>>>> <span style="color:orange;">from</span> humans <span style="color:orange;">import</span> sarth</code></p>
 
 <p>Welcome to my website! I'm a 2B Software Engineering student at the University of Waterloo. I enjoy working on interesting <a href="projects.html">projects</a> in my spare time. I'm looking for an internship in fall 2018, reach out to me at <a href="mailto:sarth.frey@gmail.com" target="_top">sarth.frey@gmail.com</a>.</p>
 
