--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </div>
 <p><code>>>> <span style="color:orange;">from</span> humans <span style="color:orange;">import</span> sarth</code></p>
 
-<p>Welcome to my website! I'm a 2B Software Engineering student at the University of Waterloo. I enjoy working on interesting <a href="projects.html">projects</a> in my spare time. I'm looking for an internship in summer 2019, reach out to me at <a href="mailto:sarth.frey@gmail.com" target="_top">sarth.frey@gmail.com</a>.</p>
+<p>Welcome to my website! I'm a 3rd year Software Engineering major at the University of Waterloo. I enjoy working on interesting <a href="projects.html">projects</a> in my spare time. I'm looking for an internship for January 2020, reach out to me at <a href="mailto:sarth.frey@gmail.com" target="_top">sarth.frey@gmail.com</a>.</p>
 
 <p>This past fall I interned at NVIDIA where I worked on <a target='_blank' href="https://rapids.ai/">Rapids AI</a>. Over the year prior I did two internships at an AI startup called <a target='_blank' href="http://www.talkiq.com">TalkIQ</a> in the <a target='_blank' href="http://www.atomic">Atomic VC</a> San Francisco and KW offices. My work there involved greatly improving our speech recognition, building our NLP active learning pipeline, and creating a distributed GPU framework for conducting bayesian hyperparameter searches which we use to train hundreds of deep learning models. Other notable projects included building a CLI to manage our data science rig and proving our ASR performs better than Google's!</p>
 
@@ -77,7 +77,7 @@
 
 <p>In my spare time I like to write to my <a target='_blank' href="https://medium.com/@sarthfrey">blog</a>. I also enjoy educating youth and recently did so as a mentor at <a target='_blank' href="http://ladieslearningcode.com/program/kids-learning-code/">Kids Learning Code</a> in Toronto. I also spend countless hours lifting, running, and taking/editing photos.</p>
 
-<p>My resume can be found <a target='_blank' href="resume.html">here</a>. It’s probably way out of date.</p>
+<p>My resume can be found <a target='_blank' href="resume.html">here</a>. It’s years out of date - try my <a target='_blank' href="http://www.linkedin.com/in/sarthfrey">LinkedIn</a>.</p>
 
 <p>This site is generously hosted via <a target='_blank' href="https://pages.github.com/">Github Pages</a>.</p>
 
