--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
 </div>
 <p><code>>>> <span style="color:orange;">from</span> humans <span style="color:orange;">import</span> sarth</code></p>
 
-<p>Welcome to my website! I'm a 3rd year Software Engineering major at the University of Waterloo. I enjoy working on interesting <a href="projects.html">projects</a> in my spare time. I'm looking for an internship for January 2020, reach out to me at <a href="mailto:sarth.frey@gmail.com" target="_top">sarth.frey@gmail.com</a>.</p>
+<p>Welcome to my website! Build model ensembles with my most recent <a target='_blank' href="https://github.com/sarthfrey/ensemble">project</a> :)</p>
+        
+<p>I'm a 3rd year Software Engineering major at the University of Waterloo. I enjoy working on interesting <a href="projects.html">projects</a> in my spare time. I'm looking for an internship for January 2020, reach out to me at <a href="mailto:sarth.frey@gmail.com" target="_top">sarth.frey@gmail.com</a>.</p>
 
 <p>This summer I worked on a multimetric optimization feature while interning at <a target='_blank' href="https://sigopt.com">SigOpt</a>. This past fall I interned at NVIDIA where I worked on the CEO's keynote demo at GTC Europe for <a target='_blank' href="https://rapids.ai/">Rapids AI</a>. Over the year prior I did two internships at an AI startup called <a target='_blank' href="http://www.talkiq.com">TalkIQ</a> in the <a target='_blank' href="http://www.atomic">Atomic VC</a> San Francisco and KW offices. My work there involved greatly improving our speech recognition, building our NLP active learning pipeline, and creating a distributed GPU framework for conducting bayesian hyperparameter searches which we use to train hundreds of deep learning models. Other notable projects included building a CLI to manage our data science rig and proving our ASR performs better than Google's!</p>
 
