--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
 </div>
 <p><code>>>> <span style="color:orange;">from</span> humans <span style="color:orange;">import</span> sarth</code></p>
 
-<p>Welcome to my website! Build model ensembles with my most recent <a target='_blank' href="https://github.com/sarthfrey/ensemble">project</a> :)</p>
+<p>Welcome to my website!</p>
+        
+<p>Build model ensembles with my most recent <a target='_blank' href="https://github.com/sarthfrey/ensemble">project</a> :)</p>
         
 <p>I'm a 3rd year Software Engineering major at the University of Waterloo. I enjoy working on interesting <a href="projects.html">projects</a> in my spare time. I'm looking for an internship for January 2020, reach out to me at <a href="mailto:sarth.frey@gmail.com" target="_top">sarth.frey@gmail.com</a>.</p>
 
