--- a/sigopt.html
+++ b/sigopt.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<meta http-equiv="refresh" content="0; url=https://app.sigopt.com/docs/overview/metric_thresholds" />
+	<meta http-equiv="refresh" content="0; url=https://sigopt.com/blog/metric-thresholds-a-new-feature-to-supercharge-multimetric-optimization" />
 </head>
 <body>
 </body>
